[gd_scene load_steps=11 format=2]

[ext_resource path="res://Levels/Survival/Survival.gd" type="Script" id=1]
[ext_resource path="res://Global/GlobalGlow.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/HUD/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/Shop/Shop.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/ScoreSubmit/ScoreSubmit.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/Platform/Platform.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/Request/RequestSpawner.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objects/ARS/ARS.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/Player/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objects/PowerOfX/PowerOfX.tscn" type="PackedScene" id=10]

[node name="Survival" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldEnvironment" parent="." instance=ExtResource( 2 )]

[node name="GUI" type="Node" parent="."]

[node name="HUD" parent="GUI" instance=ExtResource( 3 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
margin_left = 12.3516
margin_top = 8.86218
margin_right = -7.64844
margin_bottom = -11.1378

[node name="Shop" parent="GUI" instance=ExtResource( 4 )]
visible = false
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )

[node name="ScoreSubmit" parent="GUI" instance=ExtResource( 5 )]
visible = false
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )

[node name="Platforms" type="Node" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 170, 204 )

[node name="Platform2" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 170, 879 )

[node name="Platform10" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 170, 654 )

[node name="Platform11" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 604.317, 549 )

[node name="Platform12" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 170, 429 )

[node name="Platform16" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 499.419, 371.221 )

[node name="Platform17" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 720, 221.533 )

[node name="Platform18" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 960, 104 )

[node name="Platform19" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 1210, 213.434 )

[node name="Platform3" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 435.745, 762.145 )

[node name="Platform4" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 720, 829 )

[node name="Platform5" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 960, 979 )

[node name="Platform6" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 1210, 829 )

[node name="Platform13" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 1276.26, 549 )

[node name="Platform14" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 1750, 429 )

[node name="Platform15" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 1412.35, 379 )

[node name="Platform20" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 1750, 204 )

[node name="Platform7" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 1481.35, 754.145 )

[node name="Platform8" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 1750, 879 )

[node name="Platform9" parent="Platforms" instance=ExtResource( 6 )]
position = Vector2( 1750, 654 )

[node name="RequestSpawner" parent="." instance=ExtResource( 7 )]

[node name="ARS" parent="." instance=ExtResource( 8 )]
position = Vector2( 960, 540 )

[node name="Player" parent="." instance=ExtResource( 9 )]
modulate = Color( 0.196078, 0.196078, 0.196078, 1 )
position = Vector2( 960, 884.917 )

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="SecondTimer" type="Timer" parent="."]

[node name="PowerOfX" parent="." instance=ExtResource( 10 )]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )

